--- a/dt_demo/drumtranscription/static/drumtranscription/main.css
+++ b/dt_demo/drumtranscription/static/drumtranscription/main.css
@@ -39,15 +39,77 @@ body {
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #128c7e;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #128c7e;
 }
 
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+}
+
+.inputform{
+  width: 400px;
+}
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 250px;
+    background-color: #128c7e;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+body {
+    background-color: #eff5f0;
+}
+
+#row1{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+  align-items: center;
+    height: 50%;
+}
+
+#column1{
+  width: 80px;
+  height: 80px;
+    display:flex;
+    flex-direction:column;
+    margin-left: auto;
+  margin-top: auto;
+  padding-bottom: 0px;
+
+}
+
+#column2{
+  width: 65%;
+  height: 80px;
+    display:flex;
+    flex-direction:column;
+    margin-top: auto;
+  padding-top: 15px;
 }
