--- a/dt_demo/drumtranscription/static/drumtranscription/main.css
+++ b/dt_demo/drumtranscription/static/drumtranscription/main.css
@@ -1,3 +1,5 @@
+/* TODO: make colors as variables to easy change the colors */
+
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -56,7 +58,7 @@ input:checked + .slider:before {
 
 
 .inputform{
-  width: 400px;
+  width: 50%;
   height: 34px;
 }
 
