--- a/dt_demo/drumtranscription/templates/drumtranscription/loading.html
+++ b/dt_demo/drumtranscription/templates/drumtranscription/loading.html
@@ -27,7 +27,7 @@
         });
         progress();
     })
-
+    // TODO: error handling
     function progress() {
         $.ajax({  //Call ajax function sending the option loaded
             url: "",  //This is the url of the ajax view where you make the search
