established pipeline, txt to midi or midi to wav not working

--- a/dt_demo/drumtranscription/templates/drumtranscription/index.html
+++ b/dt_demo/drumtranscription/templates/drumtranscription/index.html
@@ -34,7 +34,7 @@
     function submitSettings() {
         var select = document.getElementById('id_setting')
         var selected = select.options[select.selectedIndex].value;
-        if(selected === "CRNN_MODEL"){
+        if(selected === "CRNN5"){
             document.getElementById('crnn_setting_checkbox').style.display=''
         } else{
             document.getElementById('crnn_setting_checkbox').style.display='none'
