worked on some TODO's

--- a/dt_demo/drumtranscription/templates/drumtranscription/loading.html
+++ b/dt_demo/drumtranscription/templates/drumtranscription/loading.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!--TODO: Loading gif should have transparent background
-    TODO: Add error msg
-    TODO: Look how stable that jquery code is-->
+<!-- TODO: Add error msg-->
 <html lang="en">
 <head>
     <meta charset="utf-8">
