--- a/dt_demo/drumtranscription/templates/drumtranscription/player.html
+++ b/dt_demo/drumtranscription/templates/drumtranscription/player.html
@@ -15,20 +15,14 @@
 
 <script>
 
+     function getSessionID(){
+        var urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get('session');}
+
     $(document).ready(function () {
         getID();
         jQuery(".player").trackSwitch({spacebar: true});
 
-        $(window).unload(function () {
-            alert("sadoifn")
-            $.ajax({  //Call ajax function sending the option loaded
-                url: "finish/",
-                type: 'POST',
-                success: function (response) {
-                    //just to make sure that the next function doesn't use an old response
-                }
-            });
-        });
     });
 
 
@@ -45,7 +39,8 @@
         $.ajax({  //Call ajax function sending the option loaded
             url: "",  //This is the url of the ajax view where you make the search
             type: 'POST',
-            dataType: "json",
+            dataType: "JSON",
+            data:JSON.stringify({session:getSessionID()}),
             success: function (response) {
 
                 if (response.error) { // If the function fails
